# git-commit-helper

./: Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: git.rs  lib.rs  llm.rs  main.rs  prompt.txt  prompt_chunked.txt
