[package]
name = "git-commit-helper"
version = "0.1.0"
authors = ["coding@dfine.tech"]
edition = "2024"
repository = "https://github.com/newdee/git-commit-helper.git"
description = "A helper tool designed to assist with Git commit messages. It leverages the async - openai library to generate meaningful commit messages based on the changes in the Git repository. With the help of clap, it provides a user - friendly command - line interface, and uses other libraries like git2, reqwest, serde, and tokio to handle Git operations, network requests, serialization, and asynchronous tasks respectively."
license = "MIT"
keywords = ["git", "commit"]
categories = ["command-line-utilities" ]



[dependencies]
async-openai = "0.28.1"
clap = { version = "4.5.37", features = ["derive"] }
git2 = "0.20.2"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }
