[package]
name = "git-commit-helper"
version = "0.1.0"
authors = ["coding@dfine.tech"]
edition = "2024"
repository = "https://github.com/newdee/git-commit-helper.git"
description = "Git Commit Helper is a practical tool that leverages large language models (LLMs) to analyze changes in a Git repository. It helps users generate meaningful commit messages, addressing the difficulties users may encounter when writing commit messages. At the same time, it provides a user - friendly command - line interaction experience."
license = "MIT"
keywords = ["git", "commit"]
categories = ["command-line-utilities" ]
publish = ["crates-io"]



[dependencies]
async-openai = "0.28.1"
clap = { version = "4.5.37", features = ["derive"] }
git2 = "0.20.2"
reqwest = { version = "0.12.15", features = ["blocking", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.45.0", features = ["full"] }

[profile.release]
opt-level=3
lto = "fat"
codegen-units = 1
panic= "abort"
